--- a/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
+++ b/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
@@ -6,41 +6,27 @@
     <Platform Condition="'$(Platform)' == ''">AnyCPU</Platform>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputType>Library</OutputType>
-    <RootNamespace>Microsoft.CodeAnalysis.UnitTests</RootNamespace>
-    <AssemblyName>Roslyn.Services.UnitTests</AssemblyName>
+    <RootNamespace>Microsoft.CodeAnalysis.MSBuild.UnitTests</RootNamespace>
+    <AssemblyName>Microsoft.CodeAnalysis.Workspaces.MSBuild.UnitTests</AssemblyName>
     <TargetFramework>net461</TargetFramework>
     <RuntimeIdentifier>$(RoslynDesktopRuntimeIdentifier)</RuntimeIdentifier>
     <RoslynProjectType>UnitTest</RoslynProjectType>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'" />
   <ItemGroup Label="Project References">
-    <ProjectReference Include="..\..\Compilers\Core\Portable\CodeAnalysis.csproj" />
     <ProjectReference Include="..\..\Compilers\CSharp\Portable\CSharpCodeAnalysis.csproj" />
-    <ProjectReference Include="..\..\Compilers\Test\Resources\Core\CompilerTestResources.csproj" />
     <ProjectReference Include="..\..\Compilers\VisualBasic\Portable\BasicCodeAnalysis.vbproj" />
+    <ProjectReference Include="..\..\Test\Utilities\Desktop\TestUtilities.Desktop.csproj" />
     <ProjectReference Include="..\..\Test\Utilities\Portable\TestUtilities.csproj" />
+    <ProjectReference Include="..\Core\MSBuild\Workspaces.MSBuild.csproj" />
     <ProjectReference Include="..\CoreTestUtilities\WorkspacesTestUtilities.csproj" />
-    <ProjectReference Include="..\Core\Desktop\Workspaces.Desktop.csproj" />
-    <ProjectReference Include="..\CSharp\Portable\CSharpWorkspace.csproj" />
-    <ProjectReference Include="..\VisualBasic\Portable\BasicWorkspace.vbproj" />
-    <ProjectReference Include="..\Core\Portable\Workspaces.csproj" />
-    <ProjectReference Include="..\..\Test\PdbUtilities\PdbUtilities.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.XML" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="WindowsBase" />
     <PackageReference Include="xunit" Version="$(xunitVersion)" />
     <PackageReference Include="xunit.analyzers" Version="$(xunitanalyzersVersion)" />
     <PackageReference Include="xunit.runner.console" Version="$(xunitrunnerconsoleVersion)" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="$(xunitrunnervisualstudioVersion)" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Xaml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
