--- a/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
+++ b/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
@@ -24,11 +24,25 @@
     <PackageReference Include="xunit" Version="$(xunitVersion)" />
     <PackageReference Include="xunit.analyzers" Version="$(xunitanalyzersVersion)" />
     <PackageReference Include="xunit.runner.console" Version="$(xunitrunnerconsoleVersion)" />
+    <PackageReference Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="$(MicrosoftVisualStudioSetupConfigurationInteropVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.Xaml" />
+    <Reference Include="System.Xaml">
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+    <SuggestedBindingRedirects Include="Microsoft.Build, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <MaxVersion>15.1.0.0</MaxVersion>
+    </SuggestedBindingRedirects>
+    <SuggestedBindingRedirects Include="Microsoft.Build.Framework, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <MaxVersion>15.1.0.0</MaxVersion>
+    </SuggestedBindingRedirects>
+    <SuggestedBindingRedirects Include="Microsoft.Build.Utilities.Core, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <MaxVersion>15.1.0.0</MaxVersion>
+    </SuggestedBindingRedirects>
+    <SuggestedBindingRedirects Include="Microsoft.Build.Tasks.Core, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <MaxVersion>15.1.0.0</MaxVersion>
+    </SuggestedBindingRedirects>
   </ItemGroup>
 </Project>
