--- a/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
+++ b/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
@@ -13,12 +13,18 @@
     <RoslynProjectType>UnitTest</RoslynProjectType>
   </PropertyGroup>
   <ItemGroup Label="Project References">
+    <ProjectReference Include="..\..\Compilers\Core\Portable\CodeAnalysis.csproj" />
     <ProjectReference Include="..\..\Compilers\CSharp\Portable\CSharpCodeAnalysis.csproj" />
+    <ProjectReference Include="..\..\Compilers\Test\Resources\Core\CompilerTestResources.csproj" />
     <ProjectReference Include="..\..\Compilers\VisualBasic\Portable\BasicCodeAnalysis.vbproj" />
     <ProjectReference Include="..\..\Test\Utilities\Desktop\TestUtilities.Desktop.csproj" />
     <ProjectReference Include="..\..\Test\Utilities\Portable\TestUtilities.csproj" />
+    <ProjectReference Include="..\Core\Desktop\Workspaces.Desktop.csproj" />
     <ProjectReference Include="..\Core\MSBuild\Workspaces.MSBuild.csproj" />
     <ProjectReference Include="..\CoreTestUtilities\WorkspacesTestUtilities.csproj" />
+    <ProjectReference Include="..\Core\Portable\Workspaces.csproj" />
+    <ProjectReference Include="..\CSharp\Portable\CSharpWorkspace.csproj" />
+    <ProjectReference Include="..\VisualBasic\Portable\BasicWorkspace.vbproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="xunit" Version="$(xunitVersion)" />
