Skip TestOpenProject_MetadataReferenceHasDocComments test due to missing feature

--- a/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
+++ b/src/Workspaces/MSBuildTest/Workspaces.MSBuild.Test.csproj
@@ -51,4 +51,7 @@
       <MaxVersion>15.1.0.0</MaxVersion>
     </SuggestedBindingRedirects>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
 </Project>
